24-Mar-2012 C# VSSolutions generated now display a directory hierarchy for the source in the projects.

24-Mar-2012 Ensuring that C# projects generated with multiple configurations do not have duplicate assembly references.

24-Mar-2012 Adding Opus.Core.UniqueList generic class.

14-Mar-2012 VisualCCommon's CCompilerOptionCollection and LinkerOptionCollection now expose ProgramDatabaseDirectoryPath, which is the directory containing any .pdb files generated.

14-Mar-2012 Changed Opus.Core.OutputPaths to use a SortedDictionary internally, so that when paths are extracted, they are ordered by their identification key flag.

12-Mar-2012 Action value separators are now System.IO.Path.PathSeparator. Semi-colon ';' on Windows, and ':' for *nix platforms.

08-Mar-2012 Many Opus.Core.IModule methods are now implemented explicitly, since they are only used internally, and just clutter the Intellisense in IDEs.

02-Mar-2012 Fixing bug with CommandLineProcessor with Opus.Core.ITools that require more than one path to be added to PATH.

01-Mar-2012 Added C.Win32Resource module in order to compile .rc files.

01-Mar-2012 Improved VSSolutionBuilder's support for generating paths relative to intermediate and output paths or the project file itself.

22-Feb-2012 Improved Opus.Core.BuildManager checks for node failure, so that future nodes do not start when a dependency has failed.

20-Feb-2012 Added GetChildModule function to the Opus.Core.IModuleCollection interface. This allows access to child modules of a collection so that option updates can be performed on them additionally to those inherited from the collection.

19-Feb-2012 Added Gcc linker option 'AllowUndefinedSymbols'. This defaults to true for shared objects and false for applications.

19-Feb-2012 Gcc versions now expose the compiler option "Visibility" properly.

18-Feb-2012 Added a Unix/OSX bash shell script to run the testpackages as a set of unittests.
